--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" 
+    xmlns:th="https://www.thymeleaf.org" 
+    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <head>
         <meta charset="utf-8" />
         <title>INDEX PAGE</title>
     </head>
     <body>
+        <!-- vuejs -->
         <div id="app">
             <ol>
                 <li v-for="product in products" :key="product.id">
                     {{ product.name }}
                 </li>
             </ol>
+        </div>
+
+        <!-- form -->
+        <div>
+            <div th:fragment="logout" class="logout" sec:authorize="isAuthenticated()">
+                Logged in user: <span sec:authentication="name"></span>
+                Roles: <span sec:authentication="principal.authorities"></span>
+            </div>
+            
+            <h1>Hello Spring Security</h1>
+            <p>This is an unsecured page, but you can access the secured pages after authenticating.</p>
+            <ul>
+                <li>Go to the <a href="/user/index" th:href="@{/user/index}">secured pages</a></li>
+            </ul>
         </div>
         
         <!-- scripts -->
